# gr-dpd

./: .gitignore  CMakeLists.txt  MANIFEST.md  README.md
apps/: debug_gain_phase_calib.grc  one_tone_power_measurement.py  predistorter.py  run_dpd_physical_PA.grc  run_dpd_physical_PA_training.grc  run_dpd_simulation_wienerPA.grc  run_dpd_simulation_wienerPA_training.grc  save_dpd_training_input_physical_PA_tests.grc  save_predistorted_input_physical_PA.grc  tune_peak_value_estimate_int_delay.grc
cmake/Modules/: FindLibVXI11.cmake  Finddpd_externals.cmake  dpdConfig.cmake
docs/doxygen/: Doxyfile.in
dpd_externals/: CMakeLists.txt
dpd_externals/include/: almost_equal.h  almost_equals_zero.h  apply_rotations.h  extract_g_vecs.h  extract_postdistorted_y.h  gauss_smooth.h  gen_GMPvector (copyX)_h  gen_GMPvector (copyY)_h  givens_rotate.h  hgivens_rotate.h
dpd_externals/qa/: apply_hgivens.m  rotations.m  test_almost_equals_zero.cc  test_apply_rotations.cc  test_apply_rotations.m  test_dpd_externals.sh  test_extract_g_vecs.cc  test_extract_g_vecs.m  test_extract_postdistorted_y.cc  test_extract_postdistorted_y.m  test_gauss_smooth.cc  test_gauss_smooth.m  test_gen_GMPvector (copyY)_cc  test_gen_GMPvector (copyY)_m  test_gen_GMPvector.cc  test_givens_rotate.cc  test_givens_rotate.m  test_hgivens_rotate.cc  test_hgivens_rotate.m
dpd_externals/src/: almost_equal.cc  almost_equals_zero.cc  apply_rotations.cc  extract_g_vecs.cc  extract_postdistorted_y.cc  gauss_smooth.cc  gen_GMPvector (copyX)_cc  gen_GMPvector.cc  givens_rotate.cc  hgivens_rotate.cc
grc/: CMakeLists.txt  dpd_Agilent_N1996A.xml  dpd_STS_generator_withoutCP.xml  dpd_add_cp.xml  dpd_ampl_diff.xml  dpd_basic_qpskofdm_tx_withoutCP.xml  dpd_eightX_elliptic_filter.xml  dpd_estimate_integer_delay.xml  dpd_fastRLS_DPD.xml  dpd_gain_phase_calibrate.xml  dpd_gr_dpd_elliptic_filter.xml  dpd_pa_wiener_model.xml  dpd_peak_detect.xml  dpd_phase_calibrate.xml  dpd_polynomial_regressor_vector.xml  dpd_postdistorter.xml  dpd_predistorter.xml  dpd_predistorter_training.xml  dpd_signum_func.xml  dpd_sixX_elliptic_filter.xml  dpd_stream_to_gmp_vector.xml  dpd_stream_to_message.xml  dpd_stream_to_zero_padded_vector.xml  dpd_sts_blocker.xml  dpd_upsample.xml  dpd_vector_vector_multiply.xml
include/dpd/: Agilent_N1996A.h  CMakeLists.txt  add_cp.h  api.h  (+14 more)
lib/: Agilent_N1996A_impl.cc  Agilent_N1996A_impl.h  Agilent_N1996A_impl_old2_cc  Agilent_N1996A_impl_old2_h  CMakeLists.txt  add_cp_impl.cc  add_cp_impl.h  fastRLS_DPD_impl.cc  fastRLS_DPD_impl.h  gain_phase_calibrate_impl.cc  gain_phase_calibrate_impl.h  hier_STS_generator_withoutCP.grc  hier_ampl_diff.grc  hier_basic_64qamofdm_tx_withoutCP.grc  hier_basic_qpskofdm_tx_withoutCP.grc  hier_estimate_integer_delay.grc  peak_detect_impl.cc  peak_detect_impl.h  phase_calibrate_impl.cc  phase_calibrate_impl.h  polynomial_regressor_vector_impl.cc  polynomial_regressor_vector_impl.h  postdistorter_impl.cc  postdistorter_impl.cc~  postdistorter_impl.h  postdistorter_impl.h~  predistorter_impl.cc  predistorter_impl.h  predistorter_training_impl.cc  predistorter_training_impl.h  qa_dpd.cc  qa_dpd.h  signum_func_impl.cc  signum_func_impl.h  stream_to_gmp_vector_impl.cc  stream_to_gmp_vector_impl.h  stream_to_message_impl.cc  stream_to_message_impl.h  stream_to_zero_padded_vector_impl.cc  stream_to_zero_padded_vector_impl.h  (+5 more)
lib/dpd_externals/: CMakeLists.txt  gen_GMPvector.cc
lib/dpd_externals/include/: extract_g_vecs.h  gen_GMPvector.h  givens_rotate.h  hgivens_rotate.h
lib/dpd_externals/qa/: apply_givens.m  apply_hgivens.m  apply_rotations.m  extract_g_vecs.m  givens_rotate.m  hgivens_rotate.m  in_im_test1.txt  in_re_test1.txt  out_im_test1.txt  out_re_test1.txt  test_apply_rotations.cc  test_dpd_externals.sh  test_extract_g_vecs.cc  test_extract_g_vecs.m  test_extract_postdistorted_y.cc  test_extract_postdistorted_y.m  test_gen_GMPvector.m  test_givens_rotate.cc  test_givens_rotate.m  test_hgivens_rotate.cc  test_hgivens_rotate.m
lib/dpd_externals/src/: almost_equal.cc  apply_rotations.cc  extract_g_vecs.cc  gen_GMPvector.cc  givens_rotate.cc  hgivens_rotate.cc
python/: CMakeLists.txt  STS_generator_withoutCP.py  __init__.py  ampl_diff.py  basic_qpskofdm_tx_withoutCP.py  eightX_elliptic_filter.py  estimate_integer_delay.py  gr_dpd_elliptic_filter.py  pa_wiener_model.py  qa_Agilent_N1996A.py  qa_add_cp.py  qa_fastRLS_DPD.py  qa_gain_phase_calibrate.py  qa_peak_detect.py  qa_polynomial_regressor_vector.py  qa_postdistorter.py  qa_predistorter.py  qa_predistorter_training.py  qa_signum_func.py  qa_stream_to_gmp_vector.py  qa_stream_to_message.py  qa_stream_to_zero_padded_vector.py  qa_sts_blocker.py  qa_vector_vector_multiply.py  sixX_elliptic_filter.py  upsample.py
swig/: CMakeLists.txt  dpd_swig.i
usrp_rf_tests/: ofdm_TXpower_measurement_N210SBX.py  ofdm_TXpower_measurement_N210SBX.sh  one_tone_power_measurement.sh  one_tone_power_measurement_B200mini.py  one_tone_power_measurement_B200mini.sh  one_tone_power_measurement_N210SBX.py  one_tone_power_measurement_N210SBX.sh  plot_IMD3_B200mini.m  plot_IMD3_N210SBX.m  plot_one_tone_harmonic_distortion_B200mini.m  plot_one_tone_harmonic_distortion_N210SBX.m  plot_one_tone_power_measurement_B200mini.m  plot_one_tone_power_measurement_B200mini_old.m  plot_one_tone_power_measurement_N210SBX.m  plot_one_tone_power_measurement_N210SBX_old.m  run_tone_test.grc  two_tone_power_measurement.py  two_tone_power_measurement.sh  two_tone_power_measurement_B200mini.py  two_tone_power_measurement_B200mini.sh  two_tone_power_measurement_N210SBX.py  two_tone_power_measurement_N210SBX.sh
